--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,9 @@
 
 html,
 body {
-  background: var(--background);
+  width: 100%;
+  overflow-x: hidden;
+  background: #000; /* Set background to black */
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   /* Hide scrollbar for IE, Edge and Firefox */
